fixes for CssBuilder
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@5256 dd235d61-e4b4-4fb3-b1fb-b81c2defcbc9

--- a/themes/core/css/clansuite_buttons.css
+++ b/themes/core/css/clansuite_buttons.css
@@ -1,62 +1,69 @@
-@charset "utf-8";
+
 /* CSS for Clansuite Button Styles */
 
-/* Corner radius */
-.corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; }
-.corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
-.corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
-.corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
-.corner-top { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
-.corner-bottom { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
-.corner-right {  -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
-.corner-left { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
-.corner-all { -moz-border-radius: 4px; -webkit-border-radius: 4px; }
+@charset "UTF-8";
 
-input[type="submit"], input[type="reset"],
-input[type="button"] {
-    background-color: #FFFFFF;
-    border: 1px solid #999999;
-    border-top-color: #CCCCCC;
-    border-left-color: #CCCCCC;
-    color: #333333;
-    font-size: 9px;
-    font-family: tahoma, sans-serif;
-    font-weight: bold;
-    padding: .25em;
-    margin: 3px;
-    white-space: nowrap;
-}
-	
-.Button, .ButtonGrey
+@media screen
 {
-    background: url(images/background_form_element_grey.gif) repeat-x;
-}
 
-.ButtonYellow
-{
-    background: url(images/background_form_element_yellow.gif) repeat-x;
-}
+    /* Corner radius */
+    .corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; }
+    .corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
+    .corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
+    .corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
+    .corner-top { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; }
+    .corner-bottom { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
+    .corner-right {  -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; }
+    .corner-left { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; }
+    .corner-all { -moz-border-radius: 4px; -webkit-border-radius: 4px; }
 
-.ButtonOrange
-{
-    background: url(images/background_form_element_orange.gif) repeat-x;
-}
+    input[type="submit"], input[type="reset"],
+    input[type="button"] {
+        background-color: #FFFFFF;
+        border: 1px solid #999999;
+        border-top-color: #CCCCCC;
+        border-left-color: #CCCCCC;
+        color: #333333;
+        font-size: 9px;
+        font-family: tahoma, sans-serif;
+        font-weight: bold;
+        padding: .25em;
+        margin: 3px;
+        white-space: nowrap;
+    }
+        
+    .Button, .ButtonGrey
+    {
+        background: url(images/background_form_element_grey.gif) repeat-x;
+    }
 
-.ButtonRed
-{
-    background: url(images/background_form_element_red.gif) repeat-x;
-}
+    .ButtonYellow
+    {
+        background: url(images/background_form_element_yellow.gif) repeat-x;
+    }
 
-.ButtonGreen
-{
-    background: url(images/background_form_element_green.gif) repeat-x;
-}
+    .ButtonOrange
+    {
+        background: url(images/background_form_element_orange.gif) repeat-x;
+    }
 
-.Button:active, .ButtonYellow:active,
-.ButtonRed:active, .ButtonGreen:active,
-.ButtonGrey:active, .ButtonOrange:active
-{
-    border: 1px solid #CCCCCC;
-    border-top-color: #999999;
-    border-left-color: #999999;
+    .ButtonRed
+    {
+        background: url(images/background_form_element_red.gif) repeat-x;
+    }
+
+    .ButtonGreen
+    {
+        background: url(images/background_form_element_green.gif) repeat-x;
+    }
+
+    .Button:active, .ButtonYellow:active,
+    .ButtonRed:active, .ButtonGreen:active,
+    .ButtonGrey:active, .ButtonOrange:active
+    {
+        border: 1px solid #CCCCCC;
+        border-top-color: #999999;
+        border-left-color: #999999;
+    }
+
 }
