--- a/themes/core/css/csfw/3-form/core_form.css
+++ b/themes/core/css/csfw/3-form/core_form.css
@@ -6,15 +6,15 @@
  * Jens-André Koch © 2005 - onwards
  * http://www.clansuite.com/
  * -----------------------------------------------------------------------------------------------
- * Document   : core_form.css
- * Description : core form definitions
+ * Document: core_form.css
+ * Description: core form definitions
  * Syntax recommendation http://www.w3.org/TR/REC-CSS2
  * -----------------------------------------------------------------------------------------------
- * @license    GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
- * @author     Paul Brand <info@isp-tenerife.net>
- * @package      CSFW
- * subpackage    Core
- * @version        1.0
+ * @license     GNU/GPL v2 or (at your option) any later version, see "/doc/LICENSE".
+ * @author      Paul Brand <info@isp-tenerife.net>
+ * @package     CSFW
+ * @subpackage  Core
+ * @version     1.0
  * -----------------------------------------------------------------------------------------------
 */
 @media screen
@@ -41,8 +41,8 @@
 
     .form legend
     {
-        font-size:110%; 
-        font-weight:normal; 
+        font-size:110%;
+        font-weight:normal;
         color:#000;
         background:transparent;
         border:0;
@@ -57,7 +57,7 @@
     }
 
     .form .form-check label
-    { 
+    {
         display:inline;
     }
 
@@ -72,45 +72,45 @@
     {
         color:#800;
         font-weight:bold;
-    {
+    }
 
     /*  gecko browser problem: verstecken von hidden fields um lücken zu umgehen  */
     .form input[type=hidden]
-    { 
+    {
         display:none !important;
     }
 
-    .form, 
+    .form,
     .form div,
     .form div *
-    { 
+    {
         zoom:1;
     }
 
-    /* 
+    /*
      * -----------------------------
      * fixes for ie browsern
      * -----------------------------
      */
     .form
-    { 
+    {
         padding-top:0\9;
     }
 
     .form fieldset
-    { 
+    {
         padding:0 5px\9;
         padding-top:1em\9;
     }
     .form legend
-    { 
+    {
         position:absolute\9;
         top:-.5em\9;
         *left:0\9;
     }
 
     .form fieldset
-    { 
+    {
         position:relative\9;
         overflow:visible\9;
         margin-top:1.5em\9;
@@ -128,7 +128,7 @@
     }
 
     * html .form
-    { 
+    {
         padding-top:10px;
     }
 
