--- a/themes/core/css/csfw_ie.css
+++ b/themes/core/css/csfw_ie.css
@@ -5,11 +5,13 @@
  * Author:       Clansuite CSS-Builder
  * Version:      1.0
  * Version-Date: 2010/11/05
- * Created:      2011-05-16 10:50:43
+ * Created:      2011-05-18 14:14:28
  * ----------------------------------------------------------------------------------------------
  */
+/* [reset.css] */
+
 /* [core_base.css] */
-@media all{html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,input,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;}:focus{outline:0;}table{border-collapse:separate;border-spacing:0;}blockquote:before,blockquote:after,q:before,q:after{content:"";}blockquote,q{quotes:"" "";}caption,th,td{text-align:left;font-weight:normal;}option{padding-left:0.4em;}select{padding:1px;}div{outline:0 none;}.clearfix:after{content:".";display:block;font-size:0;height:0;clear:both;visibility:hidden;}.clearfix{display:block;}#ie_clearing{display:none;}}@media screen{#csCol1{float:left;width:220px;}#csCol2{float:right;width:220px;}#csCol3{width:auto;margin-left:230px;margin-right:230px;}#csCol1{z-index:3;}#csCol2{z-index:5;}#csCol3{z-index:1;}#csCol1_content{z-index:4;}#csCol2_content{z-index:6;}#csCol3_content{z-index:2;}#csCol1_content,#csCol2_content,#csCol3_content{position:relative;}ul,li{padding:0;margin:0;display:inline;}ol{list-style:square;padding-left:15px;padding-top:3px;padding-bottom:3px;}ol.none,ul.none{list-style:none;}ol.sq,ul.sq{list-style:square;}ol.cc,ul.cc{list-style:circle;}ol.dc,ul.dc{list-style:decimal;}ol.lr,ul.lr{list-style:lower-roman;}ol.ur,ul.ur{list-style:upper-roman;}ol.ll,ul.ll{list-style:lower-latin;}ol.lg,ul.lg{list-style:lower-greek;}ol.gg,ul.gg{list-style:georgian;}ol.dlz,ul.dlz{list-style:decimal-leading-zero;}li{padding:0 2px;}pre{width:98%;padding:0;margin:0;background:#F7F7F7;border-left:10px solid #ccc;border-top:1px solid #ccc;border-right:1px solid #ccc;border-bottom:1px solid #ccc;line-height:normal;font-family:monospace,"Lucida Console",Monaco,"Courier new",Courier,"Andale Mono";font-size:8pt;color:#707070;vertical-align:top;overflow:auto;overflow-Y:hidden;}pre code{display:block;margin:-15px 0 3px 20px;padding:3px 0;vertical-align:top;}pre:hover{position:relative;z-index:99;}}@media print{}
+@media all{option{padding-left:0.4em;}select{padding:1px;}div{outline:0 none;}.clearfix:after{content:".";display:block;font-size:0;height:0;clear:both;visibility:hidden;}.clearfix{display:block;}#ie_clearing{display:none;}}@media screen{#csCol1{float:left;width:220px;}#csCol2{float:right;width:220px;}#csCol3{width:auto;margin-left:230px;margin-right:230px;}#csCol1{z-index:3;}#csCol2{z-index:5;}#csCol3{z-index:1;}#csCol1_content{z-index:4;}#csCol2_content{z-index:6;}#csCol3_content{z-index:2;}#csCol1_content,#csCol2_content,#csCol3_content{position:relative;}ul,li{padding:0;margin:0;display:inline;}ol{list-style:square;padding-left:15px;padding-top:3px;padding-bottom:3px;}ol.none,ul.none{list-style:none;}ol.sq,ul.sq{list-style:square;}ol.cc,ul.cc{list-style:circle;}ol.dc,ul.dc{list-style:decimal;}ol.lr,ul.lr{list-style:lower-roman;}ol.ur,ul.ur{list-style:upper-roman;}ol.ll,ul.ll{list-style:lower-latin;}ol.lg,ul.lg{list-style:lower-greek;}ol.gg,ul.gg{list-style:georgian;}ol.dlz,ul.dlz{list-style:decimal-leading-zero;}li{padding:0 2px;}pre code{display:block;margin:-15px 0 3px 20px;padding:3px 0;vertical-align:top;}pre:hover{position:relative;z-index:99;}}@media print{}
 
 /* [patch_core_base_ie.css] */
 @media all{* html body *{overflow:visible;}* html iframe,* html frame{overflow:auto;}* html frameset{overflow:hidden;}* html textarea{overflow:scroll;overflow-x:hidden;}* html input{overflow:hidden;}body{o\verflow:visible;}}@media screen{* html #csCol1,* html #csCol2,* html #csCol3{position:relative;}* html #csCol1_content,* html #csCol2_content,* html #csCol3_content{word-wrap:break-word;}}
@@ -20,12 +22,10 @@
 /* [patch_core_base_container_ie.css] */
 
 
-
 /* [core_base_boxes.css] */
-@media screen{.cmInfobox,.cmWarning,.cmError,.cmSuccess{display:block;height:auto;margin:-0.3em 0 0.5em;padding:6px 10px 5px;}.cmInfobox{border:1px solid #bcdfef;background:#d1ecf7 url('../images/16x16/info.png') no-repeat 5px 4px;color:#11689e;}.cmWarning{border:1px solid #fceb77;background:#fff6bf url('../images/16x16/warning.png') no-repeat 5px 4px;color:#957210;}.cmError{border:1px solid #f6abab;background:#fad0d0 url('../images/16x16/error.png') no-repeat 5px 4px;color:#b01717;}.cmSuccess{border:1px solid #f6abab;background:#e5f8ce url('../images/16x16/success.png') no-repeat 5px 4px;color:#62b548;}.cmInfobox .cmBoxTitle,.cmWarning .cmBoxTitle,.cmError .cmBoxTitle,.cmSuccess .cmBoxTitle{font-size:10pt;font-weight:bold;}.cmInfobox .cmBoxMessage,.cmWarning .cmBoxMessage,.cmError .cmBoxMessage,.cmSuccess .cmBoxMessage{font-size:9pt;padding-top:5px;text-align:left;}.cmInfobox .cmBoxLine,.cmWarning .cmBoxLine,.cmError .cmBoxLine,.cmSuccess .cmBoxLine{height:1px;border-bottom:1px dotted #808080;}}@media print{}
+@media screen{.cmInfobox,.cmWarning,.cmError,.cmSuccess{display:block;height:auto;margin:-0.3em 0 0.5em;padding:6px 10px 5px;}.cmInfobox{border:1px solid #bcdfef;background:#d1ecf7 url('images/16x16/info.png') no-repeat 5px 4px;color:#11689e;}.cmWarning{border:1px solid #fceb77;background:#fff6bf url('images/16x16/warning.png') no-repeat 5px 4px;color:#957210;}.cmError{border:1px solid #f6abab;background:#fad0d0 url('images/16x16/error.png') no-repeat 5px 4px;color:#b01717;}.cmSuccess{border:1px solid #f6abab;background:#e5f8ce url('images/16x16/success.png') no-repeat 5px 4px;color:#62b548;}.cmInfobox .cmBoxTitle,.cmWarning .cmBoxTitle,.cmError .cmBoxTitle,.cmSuccess .cmBoxTitle{font-size:10pt;font-weight:bold;}.cmInfobox .cmBoxMessage,.cmWarning .cmBoxMessage,.cmError .cmBoxMessage,.cmSuccess .cmBoxMessage{font-size:9pt;padding-top:5px;text-align:left;}.cmInfobox .cmBoxLine,.cmWarning .cmBoxLine,.cmError .cmBoxLine,.cmSuccess .cmBoxLine{height:1px;border-bottom:1px dotted #808080;}}@media print{}
 
 /* [patch_core_base_boxes_ie.css] */
-
 
 
 /* [core_grid.css] */
@@ -34,12 +34,10 @@
 /* [patch_core_grid_ie.css] */
 
 
-
 /* [core_pgrid.css] */
 @media all{.pgridblock{margin-left:auto;margin-right:auto;width:960px;}.pgrid01,.pgrid02,.pgrid03,.pgrid04,.pgrid05,.pgrid06,.pgrid07,.pgrid08,.pgrid09,.pgrid10,.pgrid11,.pgrid12,.pgrid13,.pgrid14,.pgrid15,.pgrid16,.pgrid17,.pgrid18,.pgrid18,.pgrid20,.pgrid21,.pgrid22,.pgrid23,.pgrid24{display:inline;float:left;margin-left:5px;margin-right:5px;}}
 
 /* [patch_core_pgrid_ie.css] */
-
 
 
 /* [core_form.css] */
@@ -48,13 +46,10 @@
 /* [patch_core_form_ie.css] */
 
 
-
 /* [core_form_elements.css] */
 @media screen{.form input,.form textarea,.form select,.form optgroup{font-family:Arial,Helvetica,sans-serif;}.form .form-text input,.form .form-text textarea,.form .form-select select{border:1px solid #ddd;}.form div.form-text input:focus,.form div select:focus,.form div textarea:focus{border:1px #a66 solid;background:#fff;}.form div.form-text input:hover,.form div select:hover,.form div textarea:hover{border:1px #a66 solid;background:#fff;}.form div.form-text input:active,.form div select:active,.form div textarea:active{border:1px #a66 solid;background:#fff;}fieldset:after,.form div.form-text:after,.form div.form-select:after,.form div.form-check:after{clear:both;content:".";display:block;font-size:0;height:0;visibility:hidden;}.form div.form-text,.form div.form-select,.form div.form-check{display:block;margin:0.5em 0;padding:3px 0.5em;position:relative;zoom:1;}.form .form-text input,.form .form-text textarea{display:block;position:relative;padding:0.3em 0.3em;width:58.5%;}.form .form-select select{display:block;position:relative;padding:0.3em 2px 0.3em 1px;width:60%;cursor:pointer;}.form .form-select select optgroup{font-style:normal;font-weight:bold;}.form .form-check input{cursor:pointer;}.form div.form-check input:focus,.form div.form-check input:hover,.form div.form-check input:active{border:0 none;}}@media print{}
 
 /* [patch_core_form_elements_ie.css] */
-
-
 
 
 /* [core_form_buttons.css] */
@@ -67,6 +62,5 @@
 @media screen{#breadcrumbs{width:100%;border:1px solid #444444;margin-bottom:10px;padding:4px 10px 4px 10px;font-family:"Lucida Grande",Arial,Verdana,Helvetica,sans-serif;font-size:9pt;}#tnav{}}@media print{}
 
 /* [patch_core_navigation_ie.css] */
-
 
 
