--- a/themes/frontend/standard/css/screen/content.css
+++ b/themes/frontend/standard/css/screen/content.css
@@ -400,14 +400,16 @@
 
     .menu_header
     {
-        background: #254161;
-        border: 1px solid;
+        background: url(../images/thback.gif) repeat-x scroll 0 0 transparent;
         border-color: #ffffff #ACA899 #ACA899 #ffffff;
-        padding: 5px;
+        background: #254161;
+        border-style: solid;
+        border-width: 1px;        
         cursor: default;
         font-size: 12px;
         font-weight: bold;
-        background: url(../images/thback.gif) repeat-x;
+        padding: 5px;
+        margin: 0;
     }
 
     .menu_header_small
