--- a/themes/core/css/csfw/1-base/core_base.css
+++ b/themes/core/css/csfw/1-base/core_base.css
@@ -108,16 +108,17 @@
      */
 
     /* default */
-    ul, li
+    /* Commented out: this conflicts with settings of "themes/core/css/tabs.css" */
+    /* ul, li
     {
-        /*list-style: disc;*/
-        /*padding-left: 20px;*/
-        /*padding-top: 5px;*/
-        /*padding-bottom: 8px;*/
+        list-style: disc;
+        padding-left: 20px;
+        padding-top: 5px;
+        padding-bottom: 8px;
         padding: 0;
         margin: 0;
-        display: inline;
-    }
+        display: inline; /* when inlined, it's difficult to use them as tabs
+    } */
     ol
     {
         list-style: square;
