--- a/themes/core/css/csfw_ie.css
+++ b/themes/core/css/csfw_ie.css
@@ -5,13 +5,13 @@
  * Author:       Clansuite CSS-Builder
  * Version:      1.0
  * Version-Date: 2010/11/05
- * Created:      2011-05-18 14:14:28
+ * Created:      2011-05-20 03:03:10
  * ----------------------------------------------------------------------------------------------
  */
 /* [reset.css] */
 
 /* [core_base.css] */
-@media all{option{padding-left:0.4em;}select{padding:1px;}div{outline:0 none;}.clearfix:after{content:".";display:block;font-size:0;height:0;clear:both;visibility:hidden;}.clearfix{display:block;}#ie_clearing{display:none;}}@media screen{#csCol1{float:left;width:220px;}#csCol2{float:right;width:220px;}#csCol3{width:auto;margin-left:230px;margin-right:230px;}#csCol1{z-index:3;}#csCol2{z-index:5;}#csCol3{z-index:1;}#csCol1_content{z-index:4;}#csCol2_content{z-index:6;}#csCol3_content{z-index:2;}#csCol1_content,#csCol2_content,#csCol3_content{position:relative;}ul,li{padding:0;margin:0;display:inline;}ol{list-style:square;padding-left:15px;padding-top:3px;padding-bottom:3px;}ol.none,ul.none{list-style:none;}ol.sq,ul.sq{list-style:square;}ol.cc,ul.cc{list-style:circle;}ol.dc,ul.dc{list-style:decimal;}ol.lr,ul.lr{list-style:lower-roman;}ol.ur,ul.ur{list-style:upper-roman;}ol.ll,ul.ll{list-style:lower-latin;}ol.lg,ul.lg{list-style:lower-greek;}ol.gg,ul.gg{list-style:georgian;}ol.dlz,ul.dlz{list-style:decimal-leading-zero;}li{padding:0 2px;}pre code{display:block;margin:-15px 0 3px 20px;padding:3px 0;vertical-align:top;}pre:hover{position:relative;z-index:99;}}@media print{}
+@media all{option{padding-left:0.4em;}select{padding:1px;}div{outline:0 none;}.clearfix:after{content:".";display:block;font-size:0;height:0;clear:both;visibility:hidden;}.clearfix{display:block;}#ie_clearing{display:none;}}@media screen{#csCol1{float:left;width:220px;}#csCol2{float:right;width:220px;}#csCol3{width:auto;margin-left:230px;margin-right:230px;}#csCol1{z-index:3;}#csCol2{z-index:5;}#csCol3{z-index:1;}#csCol1_content{z-index:4;}#csCol2_content{z-index:6;}#csCol3_content{z-index:2;}#csCol1_content,#csCol2_content,#csCol3_content{position:relative;}ol{list-style:square;padding-left:15px;padding-top:3px;padding-bottom:3px;}ol.none,ul.none{list-style:none;}ol.sq,ul.sq{list-style:square;}ol.cc,ul.cc{list-style:circle;}ol.dc,ul.dc{list-style:decimal;}ol.lr,ul.lr{list-style:lower-roman;}ol.ur,ul.ur{list-style:upper-roman;}ol.ll,ul.ll{list-style:lower-latin;}ol.lg,ul.lg{list-style:lower-greek;}ol.gg,ul.gg{list-style:georgian;}ol.dlz,ul.dlz{list-style:decimal-leading-zero;}li{padding:0 2px;}pre code{display:block;margin:-15px 0 3px 20px;padding:3px 0;vertical-align:top;}pre:hover{position:relative;z-index:99;}}@media print{}
 
 /* [patch_core_base_ie.css] */
 @media all{* html body *{overflow:visible;}* html iframe,* html frame{overflow:auto;}* html frameset{overflow:hidden;}* html textarea{overflow:scroll;overflow-x:hidden;}* html input{overflow:hidden;}body{o\verflow:visible;}}@media screen{* html #csCol1,* html #csCol2,* html #csCol3{position:relative;}* html #csCol1_content,* html #csCol2_content,* html #csCol3_content{word-wrap:break-word;}}
@@ -23,7 +23,7 @@
 
 
 /* [core_base_boxes.css] */
-@media screen{.cmInfobox,.cmWarning,.cmError,.cmSuccess{display:block;height:auto;margin:-0.3em 0 0.5em;padding:6px 10px 5px;}.cmInfobox{border:1px solid #bcdfef;background:#d1ecf7 url('images/16x16/info.png') no-repeat 5px 4px;color:#11689e;}.cmWarning{border:1px solid #fceb77;background:#fff6bf url('images/16x16/warning.png') no-repeat 5px 4px;color:#957210;}.cmError{border:1px solid #f6abab;background:#fad0d0 url('images/16x16/error.png') no-repeat 5px 4px;color:#b01717;}.cmSuccess{border:1px solid #f6abab;background:#e5f8ce url('images/16x16/success.png') no-repeat 5px 4px;color:#62b548;}.cmInfobox .cmBoxTitle,.cmWarning .cmBoxTitle,.cmError .cmBoxTitle,.cmSuccess .cmBoxTitle{font-size:10pt;font-weight:bold;}.cmInfobox .cmBoxMessage,.cmWarning .cmBoxMessage,.cmError .cmBoxMessage,.cmSuccess .cmBoxMessage{font-size:9pt;padding-top:5px;text-align:left;}.cmInfobox .cmBoxLine,.cmWarning .cmBoxLine,.cmError .cmBoxLine,.cmSuccess .cmBoxLine{height:1px;border-bottom:1px dotted #808080;}}@media print{}
+@media screen{.cmInfobox,.cmWarning,.cmError,.cmSuccess{display:block;height:auto;margin:-0.3em 0 0.5em;padding:6px 10px 5px;}.cmInfobox{border:1px solid #bcdfef;background:#d1ecf7 url('../images/16x16/info.png') no-repeat 5px 4px;color:#11689e;}.cmWarning{border:1px solid #fceb77;background:#fff6bf url('../images/16x16/warning.png') no-repeat 5px 4px;color:#957210;}.cmError{border:1px solid #f6abab;background:#fad0d0 url('../images/16x16/error.png') no-repeat 5px 4px;color:#b01717;}.cmSuccess{border:1px solid #f6abab;background:#e5f8ce url('../images/16x16/success.png') no-repeat 5px 4px;color:#62b548;}.cmInfobox .cmBoxTitle,.cmWarning .cmBoxTitle,.cmError .cmBoxTitle,.cmSuccess .cmBoxTitle{font-size:10pt;font-weight:bold;}.cmInfobox .cmBoxMessage,.cmWarning .cmBoxMessage,.cmError .cmBoxMessage,.cmSuccess .cmBoxMessage{font-size:9pt;padding-top:5px;text-align:left;}.cmInfobox .cmBoxLine,.cmWarning .cmBoxLine,.cmError .cmBoxLine,.cmSuccess .cmBoxLine{height:1px;border-bottom:1px dotted #808080;}}@media print{}
 
 /* [patch_core_base_boxes_ie.css] */
 
@@ -59,7 +59,7 @@
 @media screen{form-button button:hover span{background-position:bottom left;padding:5px 0 3px 18px;}}
 
 /* [core_navigation.css] */
-@media screen{#breadcrumbs{width:100%;border:1px solid #444444;margin-bottom:10px;padding:4px 10px 4px 10px;font-family:"Lucida Grande",Arial,Verdana,Helvetica,sans-serif;font-size:9pt;}#tnav{}}@media print{}
+@media screen{#tnav{}}@media print{}
 
 /* [patch_core_navigation_ie.css] */
 
