--- a/themes/core/css/csfw/1-base/reset.css
+++ b/themes/core/css/csfw/1-base/reset.css
@@ -43,6 +43,6 @@ q:before, q:after {
     content: none;
 }
 table {
-    border-collapse: collapse;
+    /* border-collapse: collapse; */
     border-spacing: 0;
 }
