--- a/themes/core/css/csfw/1-base/reset.css
+++ b/themes/core/css/csfw/1-base/reset.css
@@ -1,3 +1,5 @@
+@charset 'utf-8';
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -45,4 +47,84 @@ q:before, q:after {
 table {
     /* border-collapse: collapse; */
     border-spacing: 0;
+}
+
+/*
+ * Useful basic stylings based on Stefan Nitzsche’s work
+ *http://nitzsche.info
+ */
+
+html {
+  overflow-y: scroll;
+}
+
+body {
+  background-color: #fff;
+}
+
+strong, b {
+  font-weight: bold;
+}
+
+em, i {
+  font-style: italic;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+}
+
+.ie7 address {
+  font-style: normal;
+}
+
+.hideme {
+  position: absolute;
+  left: -999em;
+  top: -999em;
+}
+
+label,
+input[type=button],
+input[type=submit],
+button {
+  cursor: pointer;
+}
+
+q:lang(de) {
+  quotes: '„' '“' '‚' '‘';
+}
+
+q:lang(en) {
+  quotes: '“' '”' "‘" "’";
+}
+
+abbr[title] {
+  border-bottom: 1px dotted #888 !important;
+  cursor: help;
+}
+
+a abbr {
+  cursor: pointer !important;
+}
+
+.clearfix:after {
+  clear: both;
+  content: ".";
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
+
+.clearfix {
+  display: inline-block;
+}
+
+/* Hides from IE-mac \*/
+  * html .clearfix { height: 1%; }
+  .clearfix { display: block; }
+/* End hide from IE-mac */
+
+img {
+  -ms-interpolation-mode: bicubic;
 }
