- button resize [buttons fine in chrome, ff; contain probs in mxt]
git-svn-id: http://svn.gna.org/svn/clansuite/trunk@5576 dd235d61-e4b4-4fb3-b1fb-b81c2defcbc9

--- a/installation/installation.css
+++ b/installation/installation.css
@@ -299,7 +299,7 @@ dl dt
   font-size:12px;
   font-weight:700;
   margin:3px;
-  padding: 0.2em 10px;
+  padding: 0.3em 1.2em;
   white-space:nowrap;
 }
 
