--- a/installation/installation.css
+++ b/installation/installation.css
@@ -130,6 +130,7 @@ input
 }
 
 body {
+    background-color: #D5D6D7;
 	background: #d5d6d7 url("images/kubrickbgcolor.png");
 	font-size: 62.5%; /* Resets 1em to 10px */
 	font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
@@ -143,7 +144,6 @@ body {
   border-color:#DDD #bbb #bbb #ddd;
   border-style:solid;
   border-width:1px;
-  color:#222;
   display:block;
   margin:30px 0 10px;
   padding:5px 0 5px 8px;
@@ -361,7 +361,7 @@ dl dt
 
 #header
 {
-  background: #73a0c5 url(images/kubrickheader.png) no-repeat bottom center;
+  background: #D5D6D7 url(images/kubrickheader.png) no-repeat bottom center;
   height:136px;
   margin:0!important;
   padding:0;
