--- a/themes/core/css/csfw/1-base/reset.css
+++ b/themes/core/css/csfw/1-base/reset.css
@@ -23,7 +23,7 @@ time, mark, audio, video {
     border: 0;
     /* font-size: 100%; */
     /* font: inherit; */
-    vertical-align: baseline;
+    /*vertical-align: baseline;*/ /* Disabled , because this influences the error context (= highlighted source)*/
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
